--- a/css/NavBar.css
+++ b/css/NavBar.css
@@ -61,13 +61,13 @@
    display: none;
 }
 
-@media screen and (max-width: 1920px) {
+@media screen and (max-width: 600px) {
     .btn_icon_header{
         display: block;
     }
 
     .navigation_header{
-        position: absolute;
+        position: fixed;
         flex-direction: column;
         top: 0;
         background-color: rgb(67, 75, 75); 
